moving style for copyright into menu file - might fix display issue on iphone

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,11 +38,7 @@ body {
     align-items: center;
     user-select: none;
 
-    #copyright {
-        color: #DBC7C7;
-        position: fixed;
-        bottom: 1vh;
-    }
+
 }
 
 
